welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:28: error: Invalid literal number
  for (compt<-1to6) {
              ^FlowerCase:28: error: illegal start of simple expression
  for (compt<-1to6) {
              ^FlowerCase:31: error: ')' expected but '}' found.
}
^